--- a/module1/git_html/bai_tap/TaoTrangCVCaNhan.html
+++ b/module1/git_html/bai_tap/TaoTrangCVCaNhan.html
@@ -10,10 +10,11 @@
 <p><strong>Địa chỉ: Minh giáo</strong></p>
 <p><strong>Số điện thoại: 099999999</strong></p>
 <p><strong>Email: doccocaubai@codegym.com</strong></p>
-<img src='https://anh.24h.com.vn/upload/4-2010/images/2010-12-21/1292927857-TRUONG-VO-KY.jpg'>
+<img src='https://anh.24h.com.vn/upload/4-2010/images/2010-12-21/1292927857-TRUONG-VO-KY.jpg' alt="Ảnh 3x4" width="300" height="400">
 <p><strong>Học vấn: Cửu âm chân kinh, Thái cực quyền,...</strong></p>
+<P><strong>Kỹ năng: Dẫn dắt bang phái, Đoạt bảo, công thành chiến,...</strong></P>
 <p><strong>Bằng cấp: Bang chủ</strong></p>
-<P><strong>Kinh nghiệm: Trải qua nhiều biến cố, học được nhiều võ công thượng thừa, có kinh nghiệm dày dặn trên giang hồ</strong></P>
+<P><strong>Kinh nghiệm: Trải qua nhiều biến cố, học được nhiều võ công thượng thừa, có kinh nghiệm dày dạn trên giang hồ</strong></P>
 <p><strong>Định hướng cá nhân: Thống nhất giang hồ</strong></p>
 </body>
 </html>
