--- a/module1/git_html/bai_tap/simpleform.html
+++ b/module1/git_html/bai_tap/simpleform.html
@@ -29,8 +29,11 @@
 <input type = "text" name="phone2" size="5"/> -
 <input type = "text" name="phone3" size="5"/>
 <p><input type = "button" name="btSubmit" value="Submit"/></p>
-.wufoo {
-font-family: "Lucida Grande","Lucida Sans Unicode", Tahoma, sans-serif; }
-<form method="get" action="simpleform.html" class = "wufoo">
+<style>
+    .wufoo {
+        font-family: "Lucida Grande","Lucida Sans Unicode", Tahoma, sans-serif;
+    }
+</style>
+<form method="get" action="simpleform.html" class = "wufoo"></form>
 </body>
 </html>
