--- a/module1/git_html/thuc_hanh/TaoMotFormTimKiemTrenGoogle.html
+++ b/module1/git_html/thuc_hanh/TaoMotFormTimKiemTrenGoogle.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tạo một form tìm kiếm trên Google</title>
+    <title>Tạo một form tìm kiếm Google</title>
 </head>
 <body>
 
-<form action="https://www.google.com.vn/search">
+<form action="https://www.google.com.vn/search" method="get">
     <input type="text" name="q"/>
     <input type="submit" value="Tìm kiếm"/>
 </form>
